@@ -12,6 +12,8 @@ Next release:
 	* Incorporated MidiStreamParser class from libmt32emu. This fixes long standing issue with Windows MIDI driver
 	  and MIDI-in port handler that prevented receiving SysEx fragments or multi-SysEx packets sent in a single buffer.
 	  Windows MIDI driver also supports running status for short messages now. OSS MIDI and CoreMIDI drivers also improved by this.
+	* AudioFileWriter now always produces .WAV files in little endian and .RAW files in big endian which corresponds to smf2wav behaviour.
+	* Audio drivers for CoreAudio, ALSA and PulseAudio made compatible with big endian systems.
 
 2014-06-09:
 
